# xppaut

./: .gitignore  Makefile.am  configure.ac
ode/: nthet.c
src/: Makefile.am  adj2.c  aniparse.c  arrayplot.c  autevd.c  auto_nox.c  auto_nox.h  auto_x11.c  autpp.c  browse.c  browse.h  calc.c  comline.c  comline.h  dae_fun.c  del_stab.c  dialog_box.c  do_fit.c  do_fit.h  dormpri.c  edit_rhs.c  eig_list.c  find_fixedPoint.c  find_fixedPoint.h  flags.c  flags.h  form_ode.c  form_ode.h  gear.c  gear.h  ggets.c  ggets.h  graf_par.c  graf_par.h  init_conds.c  init_conds.h  integrate.c  integrate.h  kinescope.c  load_eqn.c  (+25 more)
src/auto/: autlib1.c  autlib2.c  autlib3.c  auto_c.h
src/cvodesrc/: band.c  band.h  cvdense.c  cvode.c  cvspgmr.c  cvspgmr.h  iterativ.h  llnlmath.h
src/solver/: adams.c  adams.h  backeuler.c  backeuler.h  cv2.c  cv2.h  discrete.c  discrete.h  dormpri.c  dormpri.h  euler.c  euler.h  gear.c  gear.h  heun.c  heun.h  rosenbrock.c  rosenbrock.h  runge_kutta.c  runge_kutta.h  stiff.c  stiff.h  symplect.c  symplect.h  volterra2.c
src/solver/cvodesrc/: Makefile.am  cvband.c  iterativ.c
src/util/: matrixalgebra.c  matrixalgebra.h  strutil.c  strutil.h  timeutil.c  timeutil.h
